syntax ="proto3";
package dom.v1;
option go_package="github.com/iansmith/parigot/g/dom/v1;dom";
import "protosupport/v1/protosupport.proto";

service DOMService {
    // ElementById returns the DOMElement that has the has the (DOM) id
    // given or it returns an error, DOMNotFound.
    rpc ElementById(ElementByIdRequest) returns (ElementByIdResponse); 
    // ElementByEitherId returns the DOMElement that has the either the given
    // DOM id or the given ParigotId. Note that the DOM element id is
    // checked first, so this is a drop-in replacement for ElementById
    // which also checks for parigot id.
    // If can't find any element given both ids, it returns an error, DOMNotFound.
    rpc ElementByEitherId(ElementByEitherIdRequest) returns (ElementByEitherIdResponse); 
    // SetChild is used when you created an element or elements with CreateElement
    // but did not provide a parent.  This call will add the element or elements
    // given to parent given.
    rpc SetChild(SetChildRequest) returns (SetChildResponse);
    // CreateElement creates new element or elements and attaches them
    // to the dom to the parent given, or simply returns them if no parent
    // was given.
    rpc CreateElement(CreateElementRequest) returns (CreateElementResponse);
    // Update the css classes present on an element.
    // The new values should be present in the element.
    rpc UpdateCssClass(UpdateCssClassRequest) returns (UpdateCssClassResponse);
}


message Tag {
    string name  = 1;
    string id  =2;
    repeated string css_class =3;
}

// Element is actually the final type that is passed to
// the DOM service. When these are returned the children
// in the child list do NOT have their children filled in.
message Element {
    protosupport.v1.IdRaw parigot_id = 1;
    Tag tag = 2;
    // text is the innerText property of an HTMLElement, not the lower level DOM element
    string text = 3;   
    repeated Element child = 4;
}

// ElementById returns the element associated with the id given.  Note
// that a document that has more than one element with the same id is
// invalid. The id given must be a DOM id.
message ElementByIdRequest {
    string id = 1;
}

// ElementById returns the element associated with the id given and this is 
// the return value from that call. 
message ElementByIdResponse {
    Element elem = 1;
}

// ElementByEitherId returns the element associated with either the id or
// parigot id given.  The id (DOM id) is checked first.  If there are
// multiple matching elements (and there should not be) you will receive
// a response that includes only the first match.
message ElementByEitherIdRequest {
    protosupport.v1.IdRaw parigot_id = 1;
    string id =2;
}


// ElementByEitherId returns the element associated with the either of the ids given and this is 
// the return value from that call.
message ElementByEitherIdResponse {
    Element elem = 1;
}

// SetChild sets the child of the element named by the id to the children
// provided.  Any children that existed prior to this call are discarded.
// You must supply one of id and parigot_id but not both.
message SetChildRequest {
    string id = 1;
    protosupport.v1.IdRaw parigot_id = 2;
    repeated Element child = 3;
}

// SetChildResponse informs the caller of what happened with their set
// SetChild call.  If the id provided in the SetChildRequest does not match
// an element an error is returned, not a SetChildResponse.  The number
// replacements is the number of children the element had _before_ the
// SetChild() updated it.
message SetChildResponse {
    int32 replacements = 1;
}

// CreateElementRequest is the data to create a new element in the dom.
// Do not supply a parigot id here, this is where those are generated.
// The text, id, cssClass, and children are optional.  If you do not
// supply a parent, then these elements will be "created" but they
// will need to be added to a parent later.  
message CreateElementRequest {
    Element root = 1;
    Element parent = 2;
}

// CreateElementResponse will contain the same element (and children)
// as supplied to this function, but the returned copy has the ParigotId
// fields filled in.
message CreateElementResponse {
    Element root = 1;
}

// UpdateCssClass find the element in the DOM based on
// id field in this element or the parigot id in this
// element, if no id is provided.  The CSS classes in the
// DOM will be replaced the values in this element. 
// This update is NOT recursive downward.
message UpdateCssClassRequest {
    Element elem = 1;
}

// There is no return value from UpdateCSSClass because
// any errors would have been signalled at the call site.
message UpdateCssClassResponse {
}